--- a/src/App.css
+++ b/src/App.css
@@ -46,3 +46,11 @@ hr {
     padding: 25px;
     margin: 15px;
 }
+
+.bgColor {
+  width: 100%;
+  height: auto;
+  top: 0;
+  left: 0; 
+  background: #3b434c;
+}
