--- a/src/App.css
+++ b/src/App.css
@@ -54,3 +54,15 @@ hr {
   left: 0; 
   background: #3b434c;
 }
+
+ul {
+  list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+li {
+  display:inline;
+  padding-inline-start:100px;
+  padding-inline-end: 100px;
+}
