--- a/src/App.css
+++ b/src/App.css
@@ -39,9 +39,9 @@ hr {
 }
 .block {
     width: 98%;
-    height: 40px;
+    height: 50%;
     color: white;
-    border: 100px solid #3b434c;
+    border: 100px #3b434c;
     background: #3b434c;
     padding: 25px;
     margin: 15px;
@@ -70,7 +70,6 @@ li {
   padding-inline-start:100px;
   padding-inline-end: 100px;
 }
-
 .startStop {
   background-color: black;
 }
