--- a/src/App.css
+++ b/src/App.css
@@ -107,3 +107,16 @@ button {
   margin-left: 5px;
   margin-right: 5px;
 }
+
+.showInline {
+  
+}
+
+#block_container
+{
+    text-align:left;
+}
+#bloc1, #bloc2
+{
+    display:inline;
+}
