--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,7 @@ hr {
 }
 
 .jumbotron {
-  background-image: url("chordBannerNCleff.png");
+  background-image: url("recordingsBG.png");
 }
 
 ul {
@@ -123,7 +123,7 @@ button {
   padding: 10px;
   margin: 15px;
   float: left;
-  background-color: #4a6d94;  
+  background-image: url("recordingsBG.png"); 
 }
 
 #second {
@@ -132,7 +132,7 @@ button {
   padding: 10px;
   margin: 15px;
   float: right;
-  background-color: #4a948e;  
+  background-image: url("tracksBG.png"); 
 }
 
 #clear {
